--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
   <a class="active" href="C:\Users\pratap\Desktop\sales\home"><i class="fa fa-fw fa-home"></i> Home</a> 
   <a href="home.html"><i class="fa fa-fw fa-search"></i> Search</a> 
   <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a> 
+    <a href="about us.html"><i class="fa fa-fw fa-envelope"></i> About us</a>
   <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
 </div>
 
